[gd_scene load_steps=2 format=3 uid="uid://gmva8vo3rvmv"]

[ext_resource type="Script" path="res://scripts/ui_scripts/pause_menu.gd" id="1_1q5su"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1q5su")

[node name="Shadow" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.31, 0.31, 0.31, 0.333333)

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 192.0
offset_bottom = 648.0
color = Color(0.129412, 0.145098, 0.160784, 1)

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Paused"

[node name="Resume" type="Button" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume Game"
alignment = 0

[node name="Save" type="Button" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Save Game"
alignment = 0

[node name="Load" type="Button" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load Game"
alignment = 0

[node name="QuitMenu" type="Button" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Return to Menu"
alignment = 0

[node name="QuitGame" type="Button" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit to Desktop"
alignment = 0

[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/QuitMenu" to="." method="_on_quit_menu_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
